--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="img_description">Song image</string>
+    <string name="title_itunes_web">ITunes data</string>
     
 </resources>
